# HallA-compton-jana2

./: .gitignore  CMakeLists.txt  Compton_LinkDef.h  JEventProcessor_Compton.cc  JEventProcessor_Compton.h  JEventProcessor_MOLLER.cc  JEventProcessor_MOLLER.h  JEventService_BankParsersMap.h  JEventSource_EVIO.cc  JEventSource_EVIO.h  JEventUnfolder_EVIO.h  JFactory_FADC250.cc  JFactory_FADC250.h  JFactory_PhysicsEvent.cc  JFactory_PhysicsEvent.h  README.md  compton.cc  moller.cc  sourceme.sh
config/: CMakeLists.txt  default_plugins.db  filter.db  mapping.db
data_objects/: EventHits.h  FADC250Hit.h  FADC250PulseHit.h  FADC250WaveformHit.h  PhysicsEvent.h
examples/: README.md  plot_waveform_rdf.C
parser/: BankParser.h  CMakeLists.txt  EvioEventParser.cc  EvioEventParser.h  ModuleParser.h
parser/data_objects/: EventHits.h  EvioEventWrapper.h  PhysicsEvent.h  TriggerData.h
parsers/: EvioEventParser.cc  EvioEventParser.h  RawDataParser.cc  RawDataParser.h
plugins/: CMakeLists.txt  README.md
plugins/evio_parser/: CMakeLists.txt  JEventSource_EVIO.cc  README.md
plugins/evio_parser/services/: JEventService_BankToModuleMap.h  JEventService_FilterDB.h
plugins/evio_parser/user_parsers/: CMakeLists.txt
plugins/evio_parser/user_parsers/FADC/: CMakeLists.txt
plugins/evio_parser/user_parsers/FADC/data_objects/: EventHits_FADC.h
plugins/evio_parser/user_parsers/FADCScaler/: CMakeLists.txt
plugins/evio_parser/user_parsers/FADCScaler/data_objects/: EventHits_FADCScaler.h
plugins/evio_parser/user_parsers/MPD/: CMakeLists.txt
plugins/evio_parser/user_parsers/MPD/data_objects/: MPDHit.h
plugins/evio_parser/user_parsers/TIScaler/: CMakeLists.txt
plugins/evio_parser/user_parsers/TIScaler/data_objects/: TIScalerHit.h
plugins/evio_parser/user_parsers/helicity_decoder/: ModuleParser_HelicityDecoder.cc  ModuleParser_HelicityDecoder.h
plugins/evio_processor/: CMakeLists.txt  InitPlugin.cc  README.md
scripts/: CMakeLists.txt  jce.csh  valgrind_check.csh
services/: CMakeLists.txt  JEventService_BankParsersMap.h  JEventService_BankToModelMap.h  JEventService_BankToModuleMap.h  JEventService_FilterDB.cc  JEventService_FilterDB.h  JEventService_ModelParsersMap.h  JEventService_ModuleParsersMap.h
src/plugins/: README.md
src/plugins/evio_parser/: CMakeLists.txt  InitPlugin.cc  JEventSource_EVIO.h  JEventUnfolder_EVIO.h  README.md
src/plugins/evio_parser/core/: CMakeLists.txt  EvioEventParser.cc
src/plugins/evio_parser/module_parsers/: CMakeLists.txt  InitModuleParsers.cc
src/plugins/evio_parser/module_parsers/FADC/: CMakeLists.txt  ModuleParser_FADC.cc
src/plugins/evio_parser/module_parsers/FADC/data_objects/: FADC250HallBPulseTimeHit.h
src/plugins/evio_parser/module_parsers/FADCScaler/: CMakeLists.txt
src/plugins/evio_parser/module_parsers/MPD/: CMakeLists.txt
src/plugins/evio_parser/module_parsers/MPD/data_objects/: EventHits_MPD.h
src/plugins/evio_parser/module_parsers/TIScaler/: CMakeLists.txt
src/plugins/evio_parser/module_parsers/VFTDC/: CMakeLists.txt
src/plugins/evio_parser/module_parsers/helicity_decoder/: CMakeLists.txt
src/plugins/evio_parser/parser/: CMakeLists.txt  EvioEventParser.h
src/plugins/evio_parser/services/: CMakeLists.txt
src/plugins/evio_parser/user_parsers/VFTDC/: CMakeLists.txt
src/plugins/evio_parser/user_parsers/helicity_decoder/: CMakeLists.txt
src/plugins/evio_processor/: JEventProcessor_EVIO.cc  JEventProcessor_EVIO.h  README.md
templates/: CMakeLists.txt  jce_config_paths.h.in
user_parsers/: CMakeLists.txt
user_parsers/FADC/: BankParser_FADC.cc  BankParser_FADC.h  CMakeLists.txt  ModuleParser_FADC.h
user_parsers/FADC/data_objects/: EventHits_FADC.h  FADC250HallBPulseIntegralHit.h  FADC250HallBPulsePeakHit.h  FADC250PulseHit.h  FADC250WaveformHit.h
user_parsers/FADCScaler/: BankParser_FADCScaler.cc  BankParser_FADCScaler.h  CMakeLists.txt  ModuleParser_FADCScaler.cc  ModuleParser_FADCScaler.h
user_parsers/FADCScaler/data_objects/: FADCScalerHit.h
user_parsers/ITScaler/: BankParser_ITScaler.cc  BankParser_ITScaler.h  CMakeLists.txt
user_parsers/ITScaler/data_objects/: EventHits_ITScaler.h  ITScalerHit.h
user_parsers/MPD/: BankParser_MPD.cc  BankParser_MPD.h  CMakeLists.txt  ModuleParser_MPD.cc  ModuleParser_MPD.h
user_parsers/TIScaler/: BankParser_TIScaler.cc  BankParser_TIScaler.h  CMakeLists.txt  ModuleParser_TIScaler.cc  ModuleParser_TIScaler.h
user_parsers/TIScaler/data_objects/: EventHits_TIScaler.h
user_parsers/VFTDC/: BankParser_VFTDC.cc  BankParser_VFTDC.h  CMakeLists.txt  ModuleParser_VFTDC.cc  ModuleParser_VFTDC.h
user_parsers/VFTDC/data_objects/: EventHits_VFTDC.h  VFTDCHit.h
user_parsers/helicity_decoder/: BankParser_HelicityDecoder.cc  BankParser_HelicityDecoder.h  CMakeLists.txt
user_parsers/helicity_decoder/data_objects/: EventHits_HelicityDecoder.h  HelicityDecoderData.h
